--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "0BSD",
   "dependencies": {
     "@types/react-helmet": "^6.1.7",
+    "@types/uuid": "^9.0.5",
     "gatsby": "^5.12.4",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-postcss": "^6.12.0",
@@ -30,7 +31,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^3.3.3"
+    "react-intersection-observer": "^9.5.2",
+    "tailwindcss": "^3.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
